--- a/scss/_homepage-sizzle-scroll.scss
+++ b/scss/_homepage-sizzle-scroll.scss
@@ -4,6 +4,7 @@
     padding-bottom: 130px;
     max-width: 1920px;
     overflow-x: hidden;
+    overflow-y: hidden;
     img {
         width: 200px;
     }
